--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "firebase": "^10.0.0",
+    "firebase-tools": "^12.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.4"
   },
   "devDependencies": {
