--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.4"
   },
   "devDependencies": {
